tests/negative/gold/type4-test.gold
tests/negative/type4-test.toit:6:12: error: Unresolved type: 'NonExisting'
  foo x -> NonExisting:
           ^~~~~~~~~~~
Compilation failed
